--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -7,8 +7,8 @@
     padding-top:5%;
     opacity: 0.8;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: auto !important;
+    margin-right: auto !important;
     width: 20%;
     margin-top: 50;
     margin-bottom: 50;
