--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -6,10 +6,8 @@
     border-radius: 50px;
     padding-top:5%;
     opacity: 0.8;
-    display: block;
-    margin-left: auto !important;
-    margin-right: auto !important;
     width: 20%;
+    margin-left: 40%;
     margin-top: 50;
     margin-bottom: 50;
   
