adding some fun stuff

--- a/src/Pages/Portfolio/portfolio.css
+++ b/src/Pages/Portfolio/portfolio.css
@@ -2,9 +2,6 @@
     width: 100%;
     padding-bottom: 5rem;
     opacity: 0.85;
-    }
+    padding-top:3%;
+    };
     
-    h4 {
-    padding-top: 20px;
-    text-align: center;
-    }
