--- a/src/Pages/Portfolio/portfolio.css
+++ b/src/Pages/Portfolio/portfolio.css
@@ -10,15 +10,12 @@
     background-color:#464444;
     box-shadow: 2px 2px 10px 1px black;
     color: white;
-    align-self: right;
-    padding-top:50%;
-  
 }
 
 .btn:hover {
     background-color: #464444;
     color: white;
 }   
-div{
-    background-color:red;
+.row{
+    padding-bottom: 3rem;
 }
