--- a/src/Pages/Portfolio/portfolio.css
+++ b/src/Pages/Portfolio/portfolio.css
@@ -8,7 +8,7 @@
     
 .btn {
     background-color:#464444;
-    box-shadow: 2px 2px 10px 1px black;
+    box-shadow: 2px 2px 10px 1px rgb(155, 152, 152);
     color: white;
 }
 
