--- a/src/Pages/Portfolio/portfolio.css
+++ b/src/Pages/Portfolio/portfolio.css
@@ -7,7 +7,7 @@
     };
     
 .btn {
-    background-color:#464444;
+    background-color:#aca5a5;
     box-shadow: 2px 2px 10px 1px rgb(155, 152, 152);
     color: white;
 }
