--- a/src/Pages/Portfolio/portfolio.css
+++ b/src/Pages/Portfolio/portfolio.css
@@ -19,3 +19,10 @@
 .row{
     padding-bottom: 3rem;
 }
+
+@media (max-width:500px){
+    .fa-github{
+    margin-top: 10px; 
+    padding-top: 30px;
+    align-items: center;
+    }}
