--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -22,3 +22,10 @@ h3{
         padding-bottom: 10%;
    
     }
+
+    @media (max-width:500px){
+        h3{
+        font-size: small;
+       }
+    
+    }
