--- a/src/components/LJ/Lawrence.css
+++ b/src/components/LJ/Lawrence.css
@@ -1,10 +1,9 @@
 
     @media (max-width:500px){
         h1{
-        font-size: medium;
-        padding-left: -50px !important;
-        padding-top: 20px;
-        margin-right: 60px !important;
+            opacity: 0;
+            padding: 0;
+            margin: 0;
        }
     
     }
