--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,49 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
 
-.NavBar { 
-    margin-left: auto; 
-} 
+
 
 .navbar {
-    background: #032626;
-    border: 1px solid rgba(0, 0, 0, 0.53);
-    color: white;
+    background-color: white;
+    color: rgba(108, 108, 108, 0.5);
+    /* display: flex;
+    flex: 1;
+    justify-content: flex-end; */
+ 
+
 }
 
 .nav-link {
-    color: white !important ;
+    color: rgba(108, 108, 108, 0.5);
     font-family: 'Proza Libre', sans-serif;
-    font-size: smaller;
+    font-size: medium;
+    /* display: flex;
+    flex: 1;
+    padding-right: 20px;
+    justify-content: flex-end; */
+   
 }
 
 .nav-link:hover{
     cursor: pointer;
     text-decoration: underline;
-}
-
-#SearchBar {
-    background-color: rgba(108, 108, 108, 0.5);
-    color: white;
-    font-family: 'Proza Libre', sans-serif;
-    font-size: smaller;
-}
-
-
-.LoginBtn {
-    color: white !important;
-    font-family: 'Proza Libre', sans-serif;
-    font-size: smaller;
-
-}
-
-.RegisterBtn {
-    color: white;
-    font-family: 'Proza Libre', sans-serif;
-
-}
-
-.RegisterBtn:hover {
-    color: lightgrey;
-    font-family: 'Proza Libre', sans-serif;
-
+    outline: none;
+    border: none;
 }
